--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,7 +24,7 @@ img {
 
 .landing {
   position: relative;
-  background: url('./img/showcase.jpg') no-repeat;
+  background: url('./img/tum-mi.JPG') no-repeat;
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -37,7 +37,7 @@ img {
 }
 
 .dark-overlay {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.4);
   position: absolute;
   top: 0;
   left: 0;
